0.02    2009-12-22 04:47:21Z
     - fix tests on Win32, etc.

0.01    2009-11-12
     - Initial Release