@@ -1,6 +1,0 @@
-Makefile$
-Makefile.old
-blib
-pm_to_blib
-.git
-MANIFEST.bak
