@@ -1,0 +1,12 @@
+name        = MooseX-FileAttribute
+author      = Jonathan Rockway <jrockway@cpan.org>
+license     = Perl_5
+copyright_holder = Jonathan Rockway
+copyright_year = 2009
+
+[@Author::ETHER]
+:version = 0.094
+Test::MinimumVersion.max_target_perl = 5.008003
+-remove = Test::CleanNamespaces ; TODO
+-remove = PodCoverageTests      ; TODO
+-remove = Test::PodSpelling     ; TODO
