@@ -1,3 +1,8 @@
+Revision history for MooseX-FileAttribute
+
+{{$NEXT}}
+        - dzilify, and move git repository to the GitHub moose organization
+
 0.02    2009-12-22 04:47:21Z
      - fix tests on Win32, etc.
 
